# CoderNoteBook

./: .gitignore  README.md  e of an unresolved conflict.q
example_code/: condition.cc  main.cc  readme.md
example_code/apue/: file_lock.c
example_code/cas/: cas.h  cas_main.cpp
example_code/cas/lockfree_ringbuff/: ringbuff.h
example_code/cas/lockfree_stack/: lockfree_stack.cpp  lockfree_stack.h
example_code/coroutine_demo/: demo0.cpp  demo1.cpp  demo2.cpp  demo3.cpp
example_code/coroutine_demo/coroutine/: Makefile  coroutine.cpp  coroutine.h  main.cpp
example_code/cpp/: ConsistentHash.cpp  macro.cpp
example_code/cpp-concurrency-master/: .gitignore  README.md  make_all.sh
example_code/cpp-concurrency-master/src/: 01_hello_thread.cpp  02_lambda_thread.cpp  02_thread.cpp  03_thread_argument.cpp  04_thread_self_manage.cpp  05_call_once.cpp  06_naive_multithread.cpp  07_mutex_lock.cpp  08_improved_mutex_lock.cpp  09_deadlock_bank_transfer.cpp  10_improved_bank_transfer.cpp  11_bank_transfer_wait_notify.cpp  12_async_task.cpp  13_packaged_task.cpp  14_promise_future.cpp  15_parallel_algorithm.cpp  CMakeLists.txt
example_code/design_parttern/: observer.cc
example_code/epoll/: client.c  readme.md  server.c
example_code/function/: test.c  test_asm.c  test_jmp.c
example_code/grpc_demo/: client.go
example_code/grpc_demo/customer/: customer.pb.go  customer.proto
example_code/grpc_demo/demo/: main.go  readme.md
example_code/linux_perf_example/: perf_demo.c  readme.md
example_code/lua/: build.sh  test.cpp
example_code/mult_file_no_static_obj_init/: Makefile  file1.cpp  file1.h  file2.cpp  file2.h  main.cpp  readme.md
example_code/obj_pool/: README.md  pool.c
example_code/pb_demo/: heartbeat.db  heartbeat.pb.cc  heartbeat.pb.h  heartbeat.proto  reader  reader.cc  readme.md  writter  writter.cc
example_code/perd_record/: perf_collector.h  perf_stat.h  perf_stat_def.h  perf_stat_str_def.h  perf_stat_type_def.h  readme.md  test_main.c
example_code/redis_conf/: redis_7000.conf
example_code/reflect/: dep.h  helper.h  main.cc
example_code/shell/: cpu.sh
example_code/test/gmock/: FooMock.h  (+2 more)
note/: C++字节对齐.md  C++编译耗时优化.md  CMAKE教程.md  PhysX.md  TCP和网络编程.md  UML.md  apue.md  asan.md  bash&shell编程.md  c++.md  c++11多线程.md  c++STL.md  c++其他.md  c++内存管理.md  c++多个文件链接初始化顺序问题.md  c++学习.md  c++智能指针.md  c++模板与泛型编程.md  c++的new和delete.md  c++的前置声明.md  c++的多态和虚函数.md  c++的类型转换cast.md  c++类中使用static和const.md  c++面向对象.md  c_and_c++.md  cpp.md  cpp学习.md  docker.md  git教程.md  grpc_helloworld.md  jemalloc.md  limiter.md  linux命令.md  linux命令_gcc.md  linux命令_linux性能分析和优化.md  linux命令_linux性能分析和优化2.md  linux命令_linux性能分析和优化3.md  linux命令_make教程.md  linux命令_tcpdump.md  linux命令_常用.md  (+36 more)
note/design_pattern/: readme.md
(+113 files in other folders)
